--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -148,9 +148,9 @@ h1.brand{
 }
 .brand-card{
     width:100%;
-    height:150px;
+    height:230px;
     padding:0.5rem 1rem;
-    background:$theme-blue;    
+    background:transparent;    
 }
 .card-inner{
     overflow: hidden;
