--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -8,6 +8,10 @@ $theme-blue: #144c77;
 $dark-blue: #144c77;
 $light-blue: #5893cc;
 $faded-blue: #aab3c9;
+
+$brand-card-height: 230px;
+$card-image-height: 150px;
+
 $card-tint-color: rgba(20,76,119,0.4);
 $card-hover-color: rgba(20,76,119,0.8);
 @mixin card-icon(){
@@ -148,9 +152,10 @@ h1.brand{
 }
 .brand-card{
     width:100%;
-    height:230px;
+    height:$brand-card-height;
     padding:0.5rem 1rem;
-    background:transparent;    
+    background:transparent;
+    margin-top: ($card-image-height/3)*-1;    
 }
 .card-inner{
     overflow: hidden;
@@ -160,7 +165,7 @@ h1.brand{
 
 .image{
     width:100%;
-    height:150px;
+    height:$card-image-height;
 }
 
 .img-standin{
