--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -134,6 +134,9 @@ h1.brand{
         }
 
     }
+    &.brand-card-wrap{
+        overflow: visible;
+    }
 
 }
 .photography {
@@ -161,6 +164,9 @@ h1.brand{
     overflow: hidden;
     padding: -0.1rem;
     position: relative;
+    &.brand-card-inner{
+        overflow:visible;
+    }
 }   
 
 .image{
