add space to top of portfolio details section

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -291,6 +291,7 @@ h1.brand{
     position: absolute;
     left: 0;
     top:$card-image-height;
+    padding-top: 20px;
 }
 .holder {
    overflow: hidden;
