hide already opened details window when a new one is requested

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -293,6 +293,7 @@ h1.brand{
     top:$card-image-height;
     padding-top: 20px;
     height: 1px;
+    transition: height 1s;
 }
 .holder {
    overflow: hidden;
