enque dashicons and use globe as 'www' icon

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -148,7 +148,8 @@ h1.brand{
 .web-development {
 
     &:after{
-        content:"www";
+        font-family: 'dashicons';
+        content: "\f319";
         @include card-icon();
     }
 }
