--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -150,7 +150,7 @@ h1.brand{
     &:after{
         font-family: 'dashicons';
         content: "\f319";
-        @include card-icon();
+        // @include card-icon();
     }
 }
 .brand-card{
@@ -169,14 +169,30 @@ h1.brand{
     }
 }   
 .show-details{
-    position: absolute;
-    bottom:0;
-    right:0;
-    z-index:40;
+    
     &:after{
         content: "\f348";
         font-family: "dashicons";
     }
+}
+.card-link{
+    float: right;
+    color: #fff;
+    margin-right: 5px;
+    &:after{
+        color: #fff;
+    }
+    &:hover{
+        text-decoration: none;
+    }
+    // @include card-icon();
+}
+.card-button-row{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: right;
+    z-index: 20;
 }
 .portfolio-details-column{
     background-color: $theme-blue;
@@ -300,6 +316,7 @@ h1.brand{
     height: 1px;
     transition: height 1s;
 }
+
 .holder {
    overflow: hidden;
    clear:    both;
