--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -273,7 +273,7 @@ h1.brand{
     margin:0 auto;
 }
 .footer{
-
+    
     .copyright{
         display: block;
         margin: 1rem auto;
@@ -333,4 +333,9 @@ h1.brand{
     width:1px;
     height:1px;
     overflow:hidden;
+}
+
+.align-screen-bottom{
+    position: absolute;
+    bottom: 0;
 }
