--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -101,15 +101,15 @@ h1.brand{
     position: relative;
     border:1px solid #fff;
     border-radius: 1rem;
-    background-color:transparent;
+    background-color: rgba(255,255,255,0.2);
     -webkit-transition: background-color 1s;
        -moz-transition: background-color 1s;
         -ms-transition: background-color 1s;
          -o-transition: background-color 1s;
             transition: background-color 1s;
     &:hover{
-        color:#fff;
-        background-color: rgba(255,255,255,0.2);
+        color:$theme-blue;
+        background-color: rgba(#fff,0.9);
     }
 }
 .card{
