--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -10,7 +10,7 @@ $light-blue: #5893cc;
 $faded-blue: #aab3c9;
 $padding: 5px;
 
-$brand-card-height: 230px;
+$brand-card-height: 130px;
 $card-image-height: 150px;
 
 $card-tint-color: rgba(20,76,119,0.4);
@@ -158,7 +158,7 @@ h1.brand{
     height:$brand-card-height;
     padding:0.5rem 1rem;
     background:transparent;
-    margin-top: ($card-image-height/3)*-1;    
+    // margin-top: ($card-image-height/3)*-1;    
 }
 .card-inner{
     overflow: hidden;
