paint body background theme blue

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -51,6 +51,7 @@ $card-hover-color: rgba(20,76,119,0.8);
 
 body{
     height:100%;
+    background-color: $theme-blue;
 }
 h1{
     font-family: 'Arial Black';
