make card title white

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -128,7 +128,7 @@ h2, p {
         font-size: 1.2rem;
     }
     a{
-        color:$faded-blue;
+        color:#fff;
         &:hover{
             text-decoration: underline;
         }
