change size of h2

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -125,7 +125,8 @@ h2, p {
     padding:0.1rem 0 0.1rem 0.2rem;
     h2{
         color:#fff;
-        font-size: 1.2rem;
+        font-size: 0.8rem;
+        text-transform: uppercase;
     }
     a{
         color:#fff;
