--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -95,13 +95,25 @@ h2, p {
     z-index: 10;
     position: relative;
 }
+.cta{
+   
+    a:after{
+        content: "\f465";
+        font-family: "dashicons";
+        font-size: 1.3rem;
+        padding-left: 5px;
+        display: inline-block;
+        vertical-align: middle;
+    }
+}
 .more-content{
     margin: 5rem auto;
     display: block;
-    width:8rem;
+    width:10rem;
     height:3rem;
     padding:0 0.8rem;
     text-align: center;
+    text-transform: uppercase;
     line-height: 2.7rem;
     color:#fff;
     z-index:9;
@@ -279,6 +291,7 @@ h2, p {
 .gallery-image{
     margin:0 auto;
 }
+
 .footer{
     position: absolute;
     .copyright{
