--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -66,7 +66,7 @@ h1.brand{
     margin-bottom: 0.1rem;
     color:#fff;
 }
-h2, p {
+h2, p, ul, li {
     font-family: 'Roboto', sans-serif;
     font-weight: 100;
 }
