--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -268,6 +268,10 @@ h2, p, ul, li {
     h1{
         font-size: 1rem;
     }
+    h2{
+        font-weight: 300;
+        font-size:1.5rem;
+    }
     h1, h2, p{
 
         display: inline-block;
